--- a/_config.yml
+++ b/_config.yml
@@ -33,5 +33,7 @@ permalink: pretty
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
-gems: [jekyll-paginate, jekyll-feed]
+plugins: 
+  - jekyll-paginate
+#  - jekyll-feed
 # Build settings
